<resources>
    <string name="app_name">ArcadeApp</string>
    <string name="button_rps">RPS</string>
    <string name="button_mash">Button Mash</string>
    <string name="button_pong">Pong</string>

    //RPS RELATED
    <string name="button1">Shoot</string>
    <string name="winText">You Win!</string>
    <string name="loseText">You Lose!</string>
    <string name="tieText">You Tied!</string>

    //BUTTON MASH
    <string name="Welcome">Welcome to Button Mash!</string>
    <string name="Luck">Good Luck!</string>
    <string name="Player1">Player 1</string>
    <string name="Player2">Player 2</string>
    <string name="One_Player">One Player</string>
    <string name="Two_player">Two Player</string>
    <string name="Tap">Tap!</string>
    <string name="action_settings">Settings</string>

    //FACEBOOK LOGIN
    <string name="facebook_application_id" translatable="false">280688182359419</string>
    <string name="facebook_login_protocol_scheme" translatable="false">280688182359419</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
