<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.txstate.gameapp.MainActivity"
    android:background="@drawable/background">

    <Button
        android:text="@string/button_rps"
        android:id="@+id/RPS_Button"
        android:onClick="openRps"
        android:layout_centerHorizontal="true"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="300dp"
        style="@android:style/Widget.Holo.Button.Small" />

    <Button
        android:text="@string/button_pong"
        android:id="@+id/button3"
        android:onClick="openPong"
        android:layout_centerHorizontal="true"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="350dp"
        style="@android:style/Widget.Holo.Button.Small" />

    <ImageView
        app:srcCompat="@drawable/game"
        android:layout_marginTop="50dp"
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
 />

    <Button
        android:text="@string/button_mash"
        android:id="@+id/button2"
        android:onClick="openButtonMash"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        style="@android:style/Widget.Holo.Button.Small"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/RPS_Button"
        android:layout_alignStart="@+id/RPS_Button" />


</RelativeLayout>
