<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.txstate.gameapp.MenuActivity"
    android:background="@drawable/background"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:text="@string/button_rps"
        android:id="@+id/RPS_Button"
        android:onClick="openRps"
        android:layout_centerHorizontal="true"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        style="@android:style/Widget.Holo.Button.Small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:text="@string/button_pong"
        android:id="@+id/button3"
        android:onClick="openPong"
        android:layout_centerHorizontal="true"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        style="@android:style/Widget.Holo.Button.Small"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        app:srcCompat="@drawable/game"
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.105" />

    <Button
        android:text="@string/button_mash"
        android:id="@+id/button2"
        android:onClick="openButtonMash"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Holo.Button.Small"
        android:layout_alignBottom="@+id/RPS_Button"
        android:layout_alignLeft="@+id/RPS_Button"
        android:layout_alignStart="@+id/RPS_Button"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.096"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <Button
        android:text="log out"
        android:id="@+id/logout"
        android:onClick="Log out"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Holo.Button.Small"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintLeft_toRightOf="@+id/RPS_Button"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="26dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/bChallengeRPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New challenger! Accept?"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="414dp" />


</android.support.constraint.ConstraintLayout>
